--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ h1{
 }
 .my-location,
 .work-style{
-
+    font-weight:700 ;
     height: 24px;
     left: 16px;
     color: #FFFFFF;
@@ -150,12 +150,14 @@ h1{
     padding-right: 16px;
     padding-top: 4px;
     padding-bottom: 4px;
+   
   
 }
 .work-style{
     margin-bottom: 100px;
 }
 .my-description{
+   
     font-size: 16px;
     line-height: 24px;
     color: #4F4F4F;
